getCases
