# backend/openapi/spec.yml
@@ -408,6 +408,47 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Response"
+  /getCases:
+    get:
+      summary: Gets a list of cases
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                isCompleted:
+                  type: boolean
+                hasSubmissions:
+                  type: boolean
+                start:
+                  type: number
+                take:
+                  type: number
+                desc:
+                  type: boolean
+              required:
+                - isCompleted
+                - hasSubmissions
+                - start
+                - take
+                - desc
+      responses:
+        "200":
+          description: successfully got the users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Case"
+        "500":
+          description: an error was encountered
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response"
 components:
   schemas:
     AnyValue: {}
@@ -446,10 +487,16 @@ components:
           type: string
         authorId:
           type: number
+        finalJson:
+          type:
+            - "null"
+            - string
       required:
         - fileName
         - caseName
         - authorId
+        - finalJson
+
     Assignment:
       type: object
       properties:
